# tbgui3

./: Cargo.toml  README.md  justfile
i18n/en/: tbgui.ftl  tbgui3.ftl
resources/: app.desktop  app.metainfo.xml
src/: actions.rs  app.rs  content.rs  context.rs  dialog.rs  main.rs  todo.rs
src/app/: config.rs  icon_cache.rs  icons.rs  key_bind.rs  menu.rs  settings.rs  ssh.rs  types.rs  utils.rs
src/model/: mod.rs  sample.rs
src/views/: about.rs  mod.rs  nav.rs  rawsequences.rs  settings.rs
