[package]
name = "tbgui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "TB-Profiler frontend"
repository = "https://github.com/michaelmeuli/tbgui.git"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
async-ssh2-tokio = "=0.8.12"
chrono = "0.4.40"
directories-next = "2.0.0"
emojis = "0.6.4"
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
log = "0.4.27"
open = "5.3.0"
rfd = "0.15.3"
russh-sftp = "2.0.6"
rust-embed = "8.5.0"
serde = "1.0.219"
slotmap = "1.0.7"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
